// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When querying for a digital text when the user is a COSCRAD admin detail queries (fetch by ID) should allow the user to access the private resource 1`] = `
{
  "actions": [
    {
      "description": "Add a page identifier to a digital text",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "the identifier for the page (i.e., the "page number")",
            "label": "page identifier",
            "name": "identifier",
            "type": "TEXT_FIELD",
          },
        ],
        "prepopulatedFields": {
          "aggregateCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
            "type": "digitalText",
          },
        },
      },
      "label": "Add Page to Digital Text",
      "type": "ADD_PAGE_TO_DIGITAL_TEXT",
    },
    {
      "description": "Allow a user to view (but not edit) a given resource",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a UUID",
                "name": "UUID",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "the ID of the user who will be given permission to view this resource",
            "label": "userId",
            "name": "userId",
            "options": {
              "aggregateType": "user",
            },
            "type": "DYNAMIC_SELECT",
          },
        ],
        "prepopulatedFields": {
          "aggregateCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
            "type": "digitalText",
          },
        },
      },
      "label": "Grant Read Access to User",
      "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
    },
    {
      "description": "Make a resource visible to the public",
      "form": {
        "fields": [],
        "prepopulatedFields": {
          "aggregateCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
            "type": "digitalText",
          },
        },
      },
      "label": "Publish Resource",
      "type": "PUBLISH_RESOURCE",
    },
  ],
  "audioForTitle": {
    "items": [],
  },
  "connections": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100001",
      "note": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "test note",
          },
        ],
      },
      "otherCompositeIdentifier": {
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100123",
        "type": "audioItem",
      },
      "otherContext": {
        "type": "general",
      },
      "role": "from",
      "selfContext": {
        "type": "general",
      },
    },
  ],
  "contributions": [],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
  "isPublished": false,
  "name": {
    "items": [
      {
        "languageCode": "en",
        "role": "original",
        "text": "private text",
      },
    ],
  },
  "notes": [
    {
      "context": {
        "type": "general",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100001",
      "note": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "test note",
          },
        ],
      },
    },
  ],
  "pages": [
    {
      "audio": {
        "items": [],
      },
      "content": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "test content for page",
          },
        ],
      },
      "identifier": "i",
    },
    {
      "audio": {
        "items": [],
      },
      "content": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "test content for page",
          },
        ],
      },
      "identifier": "ii",
    },
    {
      "audio": {
        "items": [],
      },
      "content": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "test content for page",
          },
        ],
      },
      "identifier": "iii",
    },
  ],
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100003",
      "label": "trees",
      "members": [],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "trees",
          },
        ],
      },
      "type": "tag",
    },
  ],
  "type": "digitalText",
}
`;

exports[`When querying for a digital text when the user is a COSCRAD admin index queries (fetch many) should allow the user to access private resources 1`] = `
{
  "count": 2,
  "entities": [
    {
      "actions": [
        {
          "description": "Add a page identifier to a digital text",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "must be a non-empty string",
                    "name": "non-empty string",
                  },
                  {
                    "message": "must be a defined value",
                    "name": "defined value",
                  },
                ],
                "description": "the identifier for the page (i.e., the "page number")",
                "label": "page identifier",
                "name": "identifier",
                "type": "TEXT_FIELD",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100101",
                "type": "digitalText",
              },
            },
          },
          "label": "Add Page to Digital Text",
          "type": "ADD_PAGE_TO_DIGITAL_TEXT",
        },
        {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "must be a UUID",
                    "name": "UUID",
                  },
                  {
                    "message": "must be a defined value",
                    "name": "defined value",
                  },
                ],
                "description": "the ID of the user who will be given permission to view this resource",
                "label": "userId",
                "name": "userId",
                "options": {
                  "aggregateType": "user",
                },
                "type": "DYNAMIC_SELECT",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100101",
                "type": "digitalText",
              },
            },
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "audioForTitle": {
        "items": [],
      },
      "connections": [],
      "contributions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100101",
      "isPublished": true,
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "published text",
          },
        ],
      },
      "notes": [],
      "pages": [],
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100003",
          "label": "trees",
          "members": [],
          "name": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "trees",
              },
            ],
          },
          "type": "tag",
        },
      ],
      "type": "digitalText",
    },
    {
      "actions": [
        {
          "description": "Add a page identifier to a digital text",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "must be a non-empty string",
                    "name": "non-empty string",
                  },
                  {
                    "message": "must be a defined value",
                    "name": "defined value",
                  },
                ],
                "description": "the identifier for the page (i.e., the "page number")",
                "label": "page identifier",
                "name": "identifier",
                "type": "TEXT_FIELD",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
                "type": "digitalText",
              },
            },
          },
          "label": "Add Page to Digital Text",
          "type": "ADD_PAGE_TO_DIGITAL_TEXT",
        },
        {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "must be a UUID",
                    "name": "UUID",
                  },
                  {
                    "message": "must be a defined value",
                    "name": "defined value",
                  },
                ],
                "description": "the ID of the user who will be given permission to view this resource",
                "label": "userId",
                "name": "userId",
                "options": {
                  "aggregateType": "user",
                },
                "type": "DYNAMIC_SELECT",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
                "type": "digitalText",
              },
            },
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
        {
          "description": "Make a resource visible to the public",
          "form": {
            "fields": [],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
                "type": "digitalText",
              },
            },
          },
          "label": "Publish Resource",
          "type": "PUBLISH_RESOURCE",
        },
      ],
      "audioForTitle": {
        "items": [],
      },
      "connections": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100001",
          "note": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "test note",
              },
            ],
          },
          "otherCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100123",
            "type": "audioItem",
          },
          "otherContext": {
            "type": "general",
          },
          "role": "from",
          "selfContext": {
            "type": "general",
          },
        },
      ],
      "contributions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
      "isPublished": false,
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "private text",
          },
        ],
      },
      "notes": [
        {
          "context": {
            "type": "general",
          },
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100001",
          "note": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "test note",
              },
            ],
          },
        },
      ],
      "pages": [
        {
          "audio": {
            "items": [],
          },
          "content": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "test content for page",
              },
            ],
          },
          "identifier": "i",
        },
        {
          "audio": {
            "items": [],
          },
          "content": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "test content for page",
              },
            ],
          },
          "identifier": "ii",
        },
        {
          "audio": {
            "items": [],
          },
          "content": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "test content for page",
              },
            ],
          },
          "identifier": "iii",
        },
      ],
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100003",
          "label": "trees",
          "members": [],
          "name": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "trees",
              },
            ],
          },
          "type": "tag",
        },
      ],
      "type": "digitalText",
    },
  ],
  "indexScopedActions": [
    {
      "description": "Creates a new digital text",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "digital text's title in the given language",
            "label": "title",
            "name": "title",
            "type": "TEXT_FIELD",
          },
          {
            "constraints": [
              {
                "message": "Must be a valid \${propertyLabel}",
                "name": "IS_ENUM",
              },
              {
                "message": "Required",
                "name": "defined value",
              },
            ],
            "description": "the language in which you are titling the digital text",
            "label": "language code",
            "name": "languageCodeForTitle",
            "options": [
              {
                "display": "Chilcotin",
                "value": "clc",
              },
              {
                "display": "Haida",
                "value": "hai",
              },
              {
                "display": "English",
                "value": "en",
              },
              {
                "display": "French",
                "value": "fra",
              },
              {
                "display": "Chinook",
                "value": "chn",
              },
              {
                "display": "Zapotec",
                "value": "zap",
              },
              {
                "display": "Spanish",
                "value": "spa",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
        "prepopulatedFields": {},
      },
      "label": "Create Digital Text",
      "type": "CREATE_DIGITAL_TEXT",
    },
  ],
  "page": 1,
}
`;

exports[`When querying for a digital text when the user is a project admin detail queries (fetch by ID) should allow the user to access the private resource 1`] = `
{
  "actions": [
    {
      "description": "Add a page identifier to a digital text",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "the identifier for the page (i.e., the "page number")",
            "label": "page identifier",
            "name": "identifier",
            "type": "TEXT_FIELD",
          },
        ],
        "prepopulatedFields": {
          "aggregateCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
            "type": "digitalText",
          },
        },
      },
      "label": "Add Page to Digital Text",
      "type": "ADD_PAGE_TO_DIGITAL_TEXT",
    },
    {
      "description": "Allow a user to view (but not edit) a given resource",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a UUID",
                "name": "UUID",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "the ID of the user who will be given permission to view this resource",
            "label": "userId",
            "name": "userId",
            "options": {
              "aggregateType": "user",
            },
            "type": "DYNAMIC_SELECT",
          },
        ],
        "prepopulatedFields": {
          "aggregateCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
            "type": "digitalText",
          },
        },
      },
      "label": "Grant Read Access to User",
      "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
    },
    {
      "description": "Make a resource visible to the public",
      "form": {
        "fields": [],
        "prepopulatedFields": {
          "aggregateCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
            "type": "digitalText",
          },
        },
      },
      "label": "Publish Resource",
      "type": "PUBLISH_RESOURCE",
    },
  ],
  "audioForTitle": {
    "items": [],
  },
  "connections": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100001",
      "note": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "test note",
          },
        ],
      },
      "otherCompositeIdentifier": {
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100123",
        "type": "audioItem",
      },
      "otherContext": {
        "type": "general",
      },
      "role": "from",
      "selfContext": {
        "type": "general",
      },
    },
  ],
  "contributions": [],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
  "isPublished": false,
  "name": {
    "items": [
      {
        "languageCode": "en",
        "role": "original",
        "text": "private text",
      },
    ],
  },
  "notes": [
    {
      "context": {
        "type": "general",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100001",
      "note": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "test note",
          },
        ],
      },
    },
  ],
  "pages": [
    {
      "audio": {
        "items": [],
      },
      "content": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "test content for page",
          },
        ],
      },
      "identifier": "i",
    },
    {
      "audio": {
        "items": [],
      },
      "content": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "test content for page",
          },
        ],
      },
      "identifier": "ii",
    },
    {
      "audio": {
        "items": [],
      },
      "content": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "test content for page",
          },
        ],
      },
      "identifier": "iii",
    },
  ],
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100003",
      "label": "trees",
      "members": [],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "trees",
          },
        ],
      },
      "type": "tag",
    },
  ],
  "type": "digitalText",
}
`;

exports[`When querying for a digital text when the user is a project admin index queries (fetch many) should allow the user to access private resources 1`] = `
{
  "count": 2,
  "entities": [
    {
      "actions": [
        {
          "description": "Add a page identifier to a digital text",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "must be a non-empty string",
                    "name": "non-empty string",
                  },
                  {
                    "message": "must be a defined value",
                    "name": "defined value",
                  },
                ],
                "description": "the identifier for the page (i.e., the "page number")",
                "label": "page identifier",
                "name": "identifier",
                "type": "TEXT_FIELD",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100101",
                "type": "digitalText",
              },
            },
          },
          "label": "Add Page to Digital Text",
          "type": "ADD_PAGE_TO_DIGITAL_TEXT",
        },
        {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "must be a UUID",
                    "name": "UUID",
                  },
                  {
                    "message": "must be a defined value",
                    "name": "defined value",
                  },
                ],
                "description": "the ID of the user who will be given permission to view this resource",
                "label": "userId",
                "name": "userId",
                "options": {
                  "aggregateType": "user",
                },
                "type": "DYNAMIC_SELECT",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100101",
                "type": "digitalText",
              },
            },
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "audioForTitle": {
        "items": [],
      },
      "connections": [],
      "contributions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100101",
      "isPublished": true,
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "published text",
          },
        ],
      },
      "notes": [],
      "pages": [],
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100003",
          "label": "trees",
          "members": [],
          "name": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "trees",
              },
            ],
          },
          "type": "tag",
        },
      ],
      "type": "digitalText",
    },
    {
      "actions": [
        {
          "description": "Add a page identifier to a digital text",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "must be a non-empty string",
                    "name": "non-empty string",
                  },
                  {
                    "message": "must be a defined value",
                    "name": "defined value",
                  },
                ],
                "description": "the identifier for the page (i.e., the "page number")",
                "label": "page identifier",
                "name": "identifier",
                "type": "TEXT_FIELD",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
                "type": "digitalText",
              },
            },
          },
          "label": "Add Page to Digital Text",
          "type": "ADD_PAGE_TO_DIGITAL_TEXT",
        },
        {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "must be a UUID",
                    "name": "UUID",
                  },
                  {
                    "message": "must be a defined value",
                    "name": "defined value",
                  },
                ],
                "description": "the ID of the user who will be given permission to view this resource",
                "label": "userId",
                "name": "userId",
                "options": {
                  "aggregateType": "user",
                },
                "type": "DYNAMIC_SELECT",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
                "type": "digitalText",
              },
            },
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
        {
          "description": "Make a resource visible to the public",
          "form": {
            "fields": [],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
                "type": "digitalText",
              },
            },
          },
          "label": "Publish Resource",
          "type": "PUBLISH_RESOURCE",
        },
      ],
      "audioForTitle": {
        "items": [],
      },
      "connections": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100001",
          "note": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "test note",
              },
            ],
          },
          "otherCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100123",
            "type": "audioItem",
          },
          "otherContext": {
            "type": "general",
          },
          "role": "from",
          "selfContext": {
            "type": "general",
          },
        },
      ],
      "contributions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100102",
      "isPublished": false,
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "private text",
          },
        ],
      },
      "notes": [
        {
          "context": {
            "type": "general",
          },
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100001",
          "note": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "test note",
              },
            ],
          },
        },
      ],
      "pages": [
        {
          "audio": {
            "items": [],
          },
          "content": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "test content for page",
              },
            ],
          },
          "identifier": "i",
        },
        {
          "audio": {
            "items": [],
          },
          "content": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "test content for page",
              },
            ],
          },
          "identifier": "ii",
        },
        {
          "audio": {
            "items": [],
          },
          "content": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "test content for page",
              },
            ],
          },
          "identifier": "iii",
        },
      ],
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b100003",
          "label": "trees",
          "members": [],
          "name": {
            "items": [
              {
                "languageCode": "en",
                "role": "original",
                "text": "trees",
              },
            ],
          },
          "type": "tag",
        },
      ],
      "type": "digitalText",
    },
  ],
  "indexScopedActions": [
    {
      "description": "Creates a new digital text",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "digital text's title in the given language",
            "label": "title",
            "name": "title",
            "type": "TEXT_FIELD",
          },
          {
            "constraints": [
              {
                "message": "Must be a valid \${propertyLabel}",
                "name": "IS_ENUM",
              },
              {
                "message": "Required",
                "name": "defined value",
              },
            ],
            "description": "the language in which you are titling the digital text",
            "label": "language code",
            "name": "languageCodeForTitle",
            "options": [
              {
                "display": "Chilcotin",
                "value": "clc",
              },
              {
                "display": "Haida",
                "value": "hai",
              },
              {
                "display": "English",
                "value": "en",
              },
              {
                "display": "French",
                "value": "fra",
              },
              {
                "display": "Chinook",
                "value": "chn",
              },
              {
                "display": "Zapotec",
                "value": "zap",
              },
              {
                "display": "Spanish",
                "value": "spa",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
        "prepopulatedFields": {},
      },
      "label": "Create Digital Text",
      "type": "CREATE_DIGITAL_TEXT",
    },
  ],
  "page": 1,
}
`;
